:construction: GET /files/:fileID/thumbnail
